--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,23 @@
 server.port = 8082
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres_demo
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres_demo?autoCommit=false
 #spring.jpa.show-sql=true
+logging.level.org.hibernate.SQL=DEBUG
+
 spring.datasource.name = postgres_demo
 spring.datasource.username=postgres
 spring.datasource.password=2215
 #spring.jpa.properties.hibernate.format_sql=true
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
-#logging.level.org.hibernate.SQL=DEBUG
-
-
-
 
 spring.jmx.enabled=true
 spring.jmx.default-domain=your-app-name
+
+spring.mail.host=smtp-relay.sendinblue.com
+spring.mail.port=587
+spring.mail.username=isken090602@gmail.com
+spring.mail.password=CjaWPy597ArN3QRJ
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
